# llteacher

./: .dockerignore  .gitignore  CLAUDE.md  DATABASE_POPULATION.md  DESIGN_V2.md  DOCKER.md  Dockerfile  README.md  SERVICES.md  TESTING.md  VIEWS.md  WORKSPACE_STRUCTURE.md  docker-entrypoint.sh  manage.py  pyproject.toml  run_tests.py
.clinerules/: AGENT.md
apps/: __init__.py
apps/accounts/: __init__.py  pyproject.toml
apps/accounts/src/: __init__.py
apps/accounts/src/accounts/: __init__.py  admin.py  forms.py  models.py  urls.py  utils.py  views.py
apps/accounts/src/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: login.html  profile.html  register.html
apps/accounts/tests/: test_domain_validation.py  test_login_view.py  test_models.py  test_profile_view.py  test_registration_view.py
apps/conversations/: __init__.py  pyproject.toml
apps/conversations/migrations/: __init__.py
apps/conversations/src/: __init__.py
apps/conversations/src/conversations/: __init__.py  admin.py  models.py  services.py  urls.py  views.py
apps/conversations/src/conversations/migrations/: 0001_initial.py
apps/conversations/templates/conversations/: detail.html  message_form.html  start.html  submit.html
apps/conversations/tests/: __init__.py  test_api_views.py  test_conversation_detail_view.py  test_conversation_service.py  test_conversation_start_view.py  test_conversation_submit_view.py  test_delete_and_restart_view.py  test_message_send_view.py  test_models.py  test_section_submit_view.py  test_streaming.py  test_submission_service.py
apps/homeworks/: __init__.py  pyproject.toml
apps/homeworks/migrations/: __init__.py
apps/homeworks/src/: __init__.py
apps/homeworks/src/homeworks/: __init__.py  admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/homeworks/src/homeworks/migrations/: 0001_initial.py
apps/homeworks/templates/homeworks/: detail.html  form.html  list.html  section_detail.html  submissions.html
apps/homeworks/tests/: __init__.py  test_create_view.py  test_delete_view.py  test_deleted_conversations_in_list_view.py  test_detail_view.py  test_edit_view.py  test_models.py  test_section_detail_view.py  test_services.py  test_submissions_view.py  test_view_progress.py  test_views.py
apps/llm/: __init__.py  pyproject.toml
apps/llm/migrations/: __init__.py
apps/llm/src/: __init__.py
apps/llm/src/llm/: __init__.py  models.py  services.py  urls.py  views.py
apps/llm/src/llm/migrations/: 0001_initial.py  0002_rename_max_tokens_to_max_completion_tokens.py
apps/llm/templates/llm/: config_detail.html  config_form.html  config_list.html
apps/llm/tests/: __init__.py  test_models.py  test_services.py  test_views.py
core/: __init__.py  pyproject.toml
core/src/: __init__.py
core/src/core/: utils.py
legacy_documentation/: 00_executive_summary.md  01_project_overview.md  02_data_model_analysis.md  03_technical_architecture.md  04_user_workflows.md  05_code_quality_analysis.md  README.md
permissions/: __init__.py  pyproject.toml
permissions/src/: __init__.py
permissions/src/permissions/: decorators.py
services/: __init__.py  pyproject.toml
services/src/: __init__.py
services/src/services/: conversation_service.py  homework_service.py  submission_service.py
src/llteacher/: __init__.py  asgi.py  production.py  pyproject.toml  settings.py  test_settings.py  urls.py  views.py  wsgi.py
src/llteacher/management/commands/: populate_test_database.py
src/llteacher/permissions/: __init__.py  decorators.py
src/llteacher/permissions/tests/: __init__.py  test_decorators.py
static/css/: conversation-detail.css  main.css  r-execution.css
static/js/: conversation-detail.js  r-execution-manager.js  real-time-chat.js
templates/: base.html  homepage.html
