[project]
name = "llteacher"
version = "2.0.0"
description = "AI-assisted educational platform for teachers and students"
authors = [
    {name = "LLTeacher Team", email = "team@llteacher.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "gunicorn",
    "python-dotenv",
    "requests",
    "whitenoise",

    # internal app
    "accounts",
    "conversations",
    "homeworks",
    "llm",
    "services",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "apps/accounts",
    "apps/conversations",
    "apps/homeworks",
    "apps/llm",
    "services"
]

[tool.uv.sources]
accounts = { workspace = true }
conversations = { workspace = true }
homeworks = { workspace = true }
llm = { workspace = true }
services = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-django",
    "black",
    "flake8",
    "mypy",
]
