[project]
name = "core"
version = "1.0.0"
description = "Shared utilities and base classes for LLTeacher"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]
