[project]
name = "permissions"
version = "1.0.0"
description = "Permission decorators and utilities for LLTeacher"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "accounts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/permissions"]
