[project]
name = "services"
version = "1.0.0"
description = "Business logic service layer for LLTeacher"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "accounts",
    "homeworks",
    "conversations",
    "llm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/services"]
