[project]
name = "services"
version = "1.0.0"
description = "Business logic service layer for LLTeacher"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/services"]
