[project]
name = "conversations"
version = "1.0.0"
description = "AI conversation handling and submissions for LLTeacher"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "accounts",
    "homeworks",
    "llm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conversations"]
