[project]
name = "homeworks"
version = "1.0.0"
description = "Homework and section management for LLTeacher"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "accounts",
    "llm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homeworks"]
