[project]
name = "llteacher-project"
version = "2.0.0"
description = "Main Django project for LLTeacher"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "uvicorn[standard]",
    "python-dotenv",
    "accounts",
    "conversations",
    "homeworks",
    "llm",
    "core",
    "permissions",
    "services",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llteacher"]
